# ctos_construction_benchmark

./: CMakeLists.txt  README.md  add_padding.py  dataset_extractor.py  download_ds.py  prepare_dataset.py  results.csv
include/: benchmark.h  complete_tree_of_shapes.h  component_tree.h  graph_of_shapes.h  node_ct.h  node_tos.h  tree_of_shapes.h
src/: benchmark.cpp  complete_tree_of_shapes.cpp  component_tree.cpp  graph_of_shapes.cpp  main.cpp  node_ct.cpp  node_tos.cpp  tree_of_shapes.cpp
